--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,8 +25,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_KEY }}
+          username: ${{ secrets.ibrahimadedayo }}
+          password: ${{ secrets.goodfellas2 }}
       -
         name: Build and push
         uses: docker/build-push-action@v5
