--- a/.github/workflows/deploy-eks.yaml
+++ b/.github/workflows/deploy-eks.yaml
@@ -8,7 +8,7 @@ on:
 
 env:
   EKS_CLUSTER_NAME: cicd-cluster
-  AWS_REGION: us-east-1
+  AWS_REGION: us-east-2
   DOCKER_REPOSITORY: goapp
 
 jobs:
@@ -30,19 +30,19 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{env.AWS_REGION}}
+        aws-access-key-id: ${{ secrets.AKIAUZPNLD2WWG54NR3L }}
+        aws-secret-access-key: ${{ secrets.9n9IQgKqPYMFQuQLwJ6UBwcBJChAg4/asZd2JHES }}
+        aws-region: ${{env.us-east-2}}
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.ibrahimadedayo}}
+        password: ${{ secrets.goodfellas2 }}
 
     - name: Build, tag, and push image to Dockerhub
       env:
-        DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}        
+        DOCKER_USERNAME: ${{ secrets.ibrahimadedayo }}        
         IMAGE_TAG: ${{ steps.commit.outputs.short }}
       run: |
         docker build -t $DOCKER_USERNAME/$DOCKER_REPOSITORY:$IMAGE_TAG ./devops-project/cicd_helm_eks
@@ -59,8 +59,8 @@ jobs:
     
     - name: update docker Username and Image name
       env: 
-        USER_NAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        IMAGE_NAME: ${{ env.DOCKER_REPOSITORY }}
+        USER_NAME: ${{ secrets.ibrahimadedayo }}
+        IMAGE_NAME: ${{ env.ibrahimadedayo/kub24 }}
       run: |
         sed -i.bak "s|username|$USER_NAME|g" ./devops-project/helm-chart/docker-cicd/values.yaml && \
         sed -i.bak "s|imagename|$IMAGE_NAME|g" ./devops-project/helm-chart/docker-cicd/values.yaml
