--- a/.github/workflows/buildmain.yml
+++ b/.github/workflows/buildmain.yml
@@ -26,8 +26,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_KEY }}
+          username: ${{ secrets.ibrahimadedayo }}
+          password: ${{ secrets.goodfellas2 }}
       -
         name: Build and push
         uses: docker/build-push-action@v5
