--- a/.github/workflows/deploy-eks.yaml
+++ b/.github/workflows/deploy-eks.yaml
@@ -1,4 +1,5 @@
 name: Deploy to EKS
+run: Kubectl apply -f deployment.yaml
 
 on:
  
@@ -31,7 +32,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AKIAUZPNLD2WWG54NR3L }}
-        aws-secret-access-key: ${{ secrets.9n9IQgKqPYMFQuQLwJ6UBwcBJChAg4/asZd2JHES }}
+        AWS_CREDENTIALS: ${{ secrets.EKS_SECRET_KEY }}        
         aws-region: ${{env.us-east-2}}
 
     - name: Login to Docker Hub
